--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,13 @@
     <string name="Incorrect_phone_number_entered">Incorrect phone number entered</string>
     <string name="short_password">password must be at least 6 characters long</string>
     <string name="eror_pass_ID">Incorect password or ID</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="messeges">Messeges</string>
+    <string name="Search_for_messanges">Search for messages</string>
+    <string name="contacts">Contacts</string>
+    <string name="settings">Settings</string>
+    <string name="chat">Chat</string>
+    <string name="account_caps">ACCOUNT</string>
+    <string name="options_caps">OPTIONS</string>
 </resources>
