design chat pages and secure password

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="chat">Chat</string>
     <string name="account_caps">ACCOUNT</string>
     <string name="options_caps">OPTIONS</string>
+    <string name="TypeHere">Type Here ...</string>
 </resources>
