* add view contacts * add move to messenger * remove icon account in settings * add sync name and phone number in settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="Name">Name</string>
     <string name="Surname">Surname</string>
     <string name="Number">Number</string>
+    <string name="Full_Name">Full Name</string>
 </resources>
